--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -59,7 +59,7 @@
 }
 
 .home__img {
-    background: url(../../assets//prof.jpg);
+    background: url(../../assets//prof2.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
